# blace-ai

./: LICENSE  README.md
blace-ai-public/: README.md
demo/: CMakeLists.txt  RunDepthModel.cpp  RunDepthModel.h  depth_anything_v2_v5_small_v3_ALL_export_version_v16.h  depth_anything_v2_v8_small_v3_ALL_export_version_v17.h  main.cpp
docs/: annotated.html  annotated_dup.js  blace__index_8h_source.html  classblace_1_1RawMemoryFetcher-members.html  classblace_1_1RawMemoryFetcher.html  classblace_1_1RawMemoryFetcher.js  classblace_1_1RawMemoryObject-members.html  classblace_1_1RawMemoryObject.html  classblace_1_1RawMemoryObject.js  classblace_1_1computation__graph_1_1GraphEvaluator-members.html  classblace_1_1computation__graph_1_1GraphEvaluator.html  classblace_1_1computation__graph_1_1GraphEvaluator.js  classblace_1_1ipc_1_1IpcEvaluator-members.html  classblace_1_1ipc_1_1IpcEvaluator.html  classblace_1_1ipc_1_1IpcEvaluator.js  classblace_1_1ml__core_1_1InferenceArgsCollection-members.html  classblace_1_1ml__core_1_1InferenceArgsCollection.html  classblace_1_1ml__core_1_1InferenceArgsCollection.js  classblace_1_1ml__core_1_1ModelIdent-members.html  classblace_1_1ml__core_1_1ModelIdent.html  classblace_1_1ml__core_1_1ModelIdent.js  classblace_1_1ops_1_1AddOp-members.html  classblace_1_1ops_1_1AddOp.html  classblace_1_1ops_1_1AddOp.js  classblace_1_1ops_1_1BaseOp-members.html  classblace_1_1ops_1_1BaseOp.html  classblace_1_1ops_1_1BaseOp.js  classblace_1_1ops_1_1DrawRectangles-members.html  classblace_1_1ops_1_1DrawRectangles.html  classblace_1_1ops_1_1DrawRectangles.js  (+162 more)
(+135 files in other folders)
